test/syntaxerrors/TestMissingRBraceIF.jdc
int x = 10;
int y = 10;
if (x == y) {
x++;
